--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -31,6 +31,10 @@
   :global(.ant-dropdown-menu-item) {
     width: 160px;
   }
+
+  .avatar {
+    margin-right: 8px;
+  }
 }
 
 i.trigger {
@@ -73,7 +77,7 @@ i.trigger {
   }
   .account {
     .avatar {
-      margin: 20px 8px 20px 0;
+      margin: 20px 0;
       color: @primary-color;
       background: rgba(255, 255, 255, 0.85);
       vertical-align: top;
@@ -102,9 +106,6 @@ i.trigger {
   .header {
     :global(.ant-divider-vertical) {
       vertical-align: unset;
-    }
-    .name {
-      display: none;
     }
     i.trigger {
       padding: 22px 12px;
