--- a/src/pages/Projects/ViewProject.less
+++ b/src/pages/Projects/ViewProject.less
@@ -16,3 +16,21 @@
     }
   }
 }
+
+.action {
+  cursor: pointer;
+  padding: 0 12px;
+  display: inline-block;
+  transition: all 0.3s;
+
+  :global {
+    .ant-rate-star {
+      margin-right: 0;
+    }
+  }
+}
+
+.boardIcon {
+  font-size: @font-size-base !important;
+  transform: none !important;
+}
