--- a/src/pages/Projects/Board.less
+++ b/src/pages/Projects/Board.less
@@ -1,6 +1,7 @@
 @import '~antd/lib/style/themes/default.less';
 
 .container {
+  margin-top: -24px;
   min-height: 100vh;
   margin-left: -50vw;
   margin-right: -50vw;
@@ -9,27 +10,11 @@
   right: 50%;
   position: relative;
   transition: 0.3s;
-  background: white;
+  //background: white;
 }
 
 .board {
   display: flex;
   overflow: auto;
   transition: 0.3s;
-}
-
-.pageHeaderContent {
-  display: flex;
-  max-width: 1200px;
-  //margin: 0 auto;
-  padding: 16px 8px 8px;
-
-  .boardSelector {
-    margin-left: 8px;
-  }
-
-  .boardIcon {
-    font-size: @font-size-base !important;
-    transform: none !important;
-  }
 }
