--- a/src/components/CardList/index.less
+++ b/src/components/CardList/index.less
@@ -13,7 +13,6 @@
   padding: 8px 8px 0;
   border-top-left-radius: 2px;
   border-top-right-radius: 2px;
-  background-color: lighten(@layout-body-background, 3%);
   transition: background-color 0.1s ease;
 }
 
@@ -40,7 +39,6 @@
 }
 
 .listWrapper {
-  background-color: lighten(@layout-body-background, 3%);
   display: flex;
   flex-direction: column;
   opacity: inherit;
@@ -58,6 +56,11 @@
   &.disabled {
     opacity: 0.5;
   }
+}
+
+.header,
+.listWrapper {
+  //background-color: darken(@layout-body-background, 3%);
 }
 
 .carditemSubheader {
@@ -131,17 +134,16 @@
   min-height: 20px;
   flex-wrap: wrap;
 
-  & > .priority {
-    margin-right: 8px;
+  .left {
+    display: flex;
+    flex: 1;
+
+    & > .priority {
+      margin-right: 8px;
+    }
   }
 }
 
-.cardUsers {
-  border-top: 1px solid @border-color-split;
-  padding-top: 9px;
-  margin: 8px 0;
-
-  .avatarList ul {
-    padding: 0;
-  }
+.avatarList ul {
+  padding: 0;
 }
