ViewProject: ellipsis no nome do projeto

--- a/src/pages/Projects/ViewProject.less
+++ b/src/pages/Projects/ViewProject.less
@@ -34,3 +34,11 @@
   font-size: @font-size-base !important;
   transform: none !important;
 }
+
+.pageHeader {
+  :global {
+    .antd-pro-components-page-header-index-row {
+      flex-wrap: wrap;
+    }
+  }
+}
