style(Layout): altura do TopNavBar configurável pelas configurações

--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -3,7 +3,7 @@
 @pro-header-hover-bg: rgba(0, 0, 0, 0.025);
 
 .header {
-  height: 64px;
+  height: @layout-header-height;
   padding: 0;
   background: #fff;
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
@@ -11,8 +11,8 @@
 }
 
 .logo {
-  height: 64px;
-  line-height: 58px;
+  height: @layout-header-height;
+  line-height: @layout-header-height;
   vertical-align: top;
   display: inline-block;
   padding: 0 0 0 24px;
@@ -41,14 +41,19 @@
   }
 }
 
-i.trigger {
-  font-size: 20px;
-  height: 64px;
-  cursor: pointer;
-  transition: all 0.3s, padding 0s;
-  padding: 22px 24px;
-  &:hover {
-    background: @pro-header-hover-bg;
+.trigger {
+  height: 100%;
+  padding: 0 24px;
+  display: inline-block;
+
+  i {
+    font-size: 20px;
+    cursor: pointer;
+    vertical-align: middle;
+    transition: all 0.3s, padding 0s;
+    &:hover {
+      background: @pro-header-hover-bg;
+    }
   }
 }
 
@@ -81,16 +86,15 @@ i.trigger {
   }
   .account {
     .avatar {
-      margin: 20px 0;
       color: @primary-color;
       background: rgba(255, 255, 255, 0.85);
-      vertical-align: top;
+      vertical-align: middle;
     }
   }
 }
 
 .dark {
-  height: 64px;
+  height: @layout-header-height;
   .action {
     color: rgba(255, 255, 255, 0.85);
     > i {
