--- a/src/components/CardList/CardItem.less
+++ b/src/components/CardList/CardItem.less
@@ -21,7 +21,7 @@
   user-select: none;
   border-radius: 4px;
   box-shadow: 0 1px 2px @shadow-color;
-  background: white;
+  border-top: 2px solid transparent;
 
   :global {
     .ant-card-meta-title {
@@ -62,13 +62,39 @@
   .left {
     display: flex;
     flex: 1;
-
-    & > .priority {
-      margin-right: 8px;
-    }
   }
 }
 
 .avatarList ul {
   padding: 0;
+  height: 20px;
+}
+
+.due {
+  font-size: 12px;
+  font-weight: bold;
+  background: @red-4;
+  color: white;
+  padding: 0 8px;
+  border-radius: 4px;
+}
+
+.higher {
+  border-color: @red-5;
+}
+
+.high {
+  border-color: @orange-5;
+}
+
+.normal {
+  border-color: hsv(0, 0, 65%);
+}
+
+.low {
+  border-color: @blue-5;
+}
+
+.lower {
+  border-color: @green-5;
 }
