style(Card): inversão da descrição com as meta infos

--- a/src/components/CardList/CardItem.less
+++ b/src/components/CardList/CardItem.less
@@ -54,7 +54,7 @@
 
 .cardMetaInfo {
   display: flex;
-  margin-bottom: 4px;
+  margin-top: 12px;
   line-height: 20px;
   min-height: 20px;
   flex-wrap: wrap;
