--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -69,7 +69,7 @@
     &:hover {
       background: @pro-header-hover-bg;
     }
-    :global(&.ant-popover-open) {
+    &:global(.opened) {
       background: @pro-header-hover-bg;
     }
   }
@@ -96,7 +96,7 @@
       color: rgba(255, 255, 255, 0.85);
     }
     &:hover,
-    &:global(.ant-popover-open) {
+    &:global(.opened) {
       background: @primary-color;
     }
     :global(.ant-badge) {
