--- a/src/pages/Projects/ViewProject.less
+++ b/src/pages/Projects/ViewProject.less
@@ -12,7 +12,6 @@
 
 .action {
   cursor: pointer;
-  padding: 0 12px;
   display: inline-block;
   transition: all 0.3s;
 
@@ -23,13 +22,23 @@
   }
 }
 
-.boardIcon {
-  font-size: @font-size-base !important;
-  transform: none !important;
+.selector {
+  display: flex;
+  align-items: flex-end;
+  .placeholder {
+    flex: 1;
+    white-space: normal;
+    text-align: left;
+  }
+  .boardIcon {
+    font-size: @font-size-base !important;
+    transform: none !important;
+  }
 }
 
 .optionsBar {
   display: flex;
+  flex-direction: column;
 
   .left {
     flex: 1 1 auto;
@@ -39,6 +48,7 @@
     .title {
       flex: 1;
       display: flex;
+      padding: 0 12px;
     }
 
     .settings {
@@ -50,14 +60,42 @@
     flex: 0 0 auto;
     display: flex;
 
-    padding-left: 8px;
-    margin-left: 8px;
-    border-left: 1px solid @border-color-base;
-
     :global {
       .ant-btn:not(:last-child) {
         margin-right: 8px;
       }
     }
+  }
+}
+
+@media screen and (min-width: @screen-lg) {
+  .optionsBar {
+    flex-direction: row;
+
+    .right {
+      padding-left: 8px;
+      margin-left: 8px;
+      border-left: 1px solid @border-color-base;
+    }
+  }
+
+  .selector {
+    max-width: 500px;
+  }
+}
+
+@media screen and (max-width: @screen-md-max) {
+  .optionsBar {
+    .left {
+      margin-bottom: 16px;
+    }
+  }
+
+  .selector {
+    flex: 1;
+  }
+
+  .hiddenInMobile {
+    display: none !important;
   }
 }
