--- a/src/pages/Projects/Board.less
+++ b/src/pages/Projects/Board.less
@@ -12,9 +12,10 @@
 
 .board {
   display: flex;
-  overflow: auto;
+  overflow-x: visible;
+  overflow-y: hidden;
   transition: 0.3s;
-  height: ~'calc(100vh - @{layout-header-height} - 65px)';
+  height: 100%;
 }
 
 .scroll {
