Corrige altura do scroll em mobile

--- a/src/pages/Projects/Board.less
+++ b/src/pages/Projects/Board.less
@@ -25,7 +25,7 @@
 }
 
 @media screen and (max-width: @screen-md-max) {
-  .board {
-    height: ~'calc(100vh - @{layout-header-height} - 113px)';
+  .scroll {
+    height: ~'calc(100vh - @{layout-header-height} - 113px)' !important;
   }
 }
