CardItem: link agora está associado ao CardItem inteiro

--- a/src/components/CardList/CardItem.less
+++ b/src/components/CardList/CardItem.less
@@ -15,6 +15,10 @@
       }
     }
   }
+
+  & > a {
+    cursor: grab;
+  }
 }
 
 .card {
@@ -63,10 +67,6 @@
     display: flex;
     flex: 1;
   }
-}
-
-.first {
-  margin-right: 5px;
 }
 
 .avatarList ul {
