--- a/src/components/AvatarList/index.less
+++ b/src/components/AvatarList/index.less
@@ -4,15 +4,14 @@
   display: inline-block;
   ul {
     display: inline-block;
-    margin-left: 8px;
     font-size: 0;
+    padding: 0;
   }
 }
 
 .avatarItem {
   display: inline-block;
   font-size: @font-size-base;
-  margin-left: -8px;
   width: @avatar-size-base;
   height: @avatar-size-base;
   :global {
