--- a/src/pages/Workflows/ViewWorkflow.less
+++ b/src/pages/Workflows/ViewWorkflow.less
@@ -113,7 +113,7 @@
 .scroll {
   display: flex;
   overflow: hidden;
-  height: ~'calc(100vh - @{layout-header-height} - 65px - 54px)' !important;
+  height: ~'calc(100vh - @{layout-header-height} - 65px)' !important;
 }
 
 .nodeList {
