--- a/src/pages/Cards/ViewCardModal.less
+++ b/src/pages/Cards/ViewCardModal.less
@@ -6,6 +6,11 @@
   transition: none;
 }
 
-.cardName {
-  float: right;
+.cardTitle {
+  padding-right: 32px;
+  margin-bottom: 12px;
+  font-size: @font-size-lg;
+  line-height: 22px;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.85);
 }
