style(ViewCardModal): reorganização das informações do card

--- a/src/pages/Cards/ViewCardModal.less
+++ b/src/pages/Cards/ViewCardModal.less
@@ -14,3 +14,38 @@
   font-weight: 500;
   color: rgba(0, 0, 0, 0.85);
 }
+
+.cardListInfo {
+  margin-bottom: 12px;
+
+  & > :global(.ant-row) {
+    margin-bottom: 8px;
+  }
+
+  .label {
+    color: rgba(0, 0, 0, 0.4);
+    font-weight: 500;
+  }
+}
+
+.actionList {
+  :global {
+    .ant-list-header {
+      padding-top: 0;
+      padding-bottom: 4px;
+      border-bottom: none;
+      color: rgba(0, 0, 0, 0.4);
+      font-weight: 500;
+    }
+
+    .ant-list-item {
+      padding-top: 4px;
+      padding-bottom: 4px;
+      border-bottom: none;
+    }
+  }
+}
+
+.commentsContainer {
+  border-top: 1px solid @border-color-split;
+}
