--- a/src/pages/Teams/ViewTeam.less
+++ b/src/pages/Teams/ViewTeam.less
@@ -1,50 +1,14 @@
 @import '~antd/lib/style/themes/default.less';
 
-.descriptionIcon {
-  margin-left: 12px;
-  color: @text-color-secondary;
-  font-style: normal;
+.action {
+  display: inline-block;
+  padding: 0 8px;
   cursor: pointer;
-}
+  transition: all 0.3s;
 
-.descriptionPopover {
   :global {
-    .ant-popover-inner-content {
-      max-width: 256px;
-      max-height: 290px;
-      overflow: auto;
-    }
-  }
-}
-
-.optionsBar {
-  display: flex;
-  flex-direction: column;
-
-  .left {
-    display: flex;
-    flex: 1 1 auto;
-    align-items: center;
-
-    .title {
-      display: flex;
-      flex: 1;
-      padding: 0 12px;
-    }
-
-    .settings {
-      padding: 0 8px;
-    }
-  }
-
-  .right {
-    display: flex;
-    flex: 0 0 auto;
-
-    :global {
-      .ant-btn:not(:last-child) {
-        margin-right: 8px;
-      }
+    .ant-rate-star {
+      margin-right: 0;
     }
   }
 }
