fix(ParticipantForm): AssiginMember

--- a/src/components/Form/Card/Participants/index.less
+++ b/src/components/Form/Card/Participants/index.less
@@ -1,7 +1,14 @@
 @import '~antd/lib/style/themes/default.less';
 
-.form {
-  :global(.ant-form-item) {
-    margin-bottom: 0;
-  }
+.participant {
+  margin-bottom: 8px;
+  padding: 0 4px;
+}
+
+.noParticipants {
+  text-align: center;
+}
+
+.listParticipants {
+  margin-top: 12px;
 }
