CardList: nova forma de adicionar cardlists

--- a/src/components/ColumnList/index.less
+++ b/src/components/ColumnList/index.less
@@ -27,6 +27,12 @@
 
 .footer {
   border-top: @border-width-base @border-style-base @border-color-split;
+
+  :global {
+    .ant-btn-group:not(:last-child), .ant-btn:not(:last-child) {
+      margin-right: 8px;
+    }
+  }
 }
 
 .title {
