--- a/src/pages/Teams/NewCardList.less
+++ b/src/pages/Teams/NewCardList.less
@@ -1,13 +1,26 @@
 @import '~antd/lib/style/themes/default.less';
 
-.list {
-  align-self: flex-start;
+.content {
+  padding: 10px;
+  height: 100%;
+  width: 300px;
+}
+
+.plusIcon {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  opacity: 0.6;
+
+  i {
+    font-size: 24px;
+  }
 }
 
 .form {
-  padding: 10px 10px 0;
-  width: 250px;
-
   :global {
     .ant-form-item {
       margin-bottom: 12px;
