Board: horizontal scroll

--- a/src/layouts/BasicLayout.less
+++ b/src/layouts/BasicLayout.less
@@ -1,5 +1,9 @@
 @import '~antd/lib/style/themes/default.less';
 
+.layout {
+  overflow: auto;
+}
+
 .content {
   margin: 24px;
   padding-top: @layout-header-height;
