--- a/src/pages/Teams/Board.less
+++ b/src/pages/Teams/Board.less
@@ -12,20 +12,14 @@
 
 .board {
   display: flex;
-  height: 100%;
+  height: ~'calc(100vh - @{layout-header-height} - 100px)' !important;
   overflow-x: visible;
   overflow-y: hidden;
   transition: 0.3s;
 }
 
-.scroll {
-  display: flex;
-  height: ~'calc(100vh - @{layout-header-height} - 100px)' !important;
-  overflow: hidden;
-}
-
 @media screen and (max-width: @screen-md-max) {
-  .scroll {
+  .board {
     height: ~'calc(100vh - @{layout-header-height} - 63px)' !important;
   }
 }
