--- a/src/pages/Boards/Board.less
+++ b/src/pages/Boards/Board.less
@@ -23,3 +23,23 @@
     height: ~'calc(100vh - @{layout-header-height} - 63px)' !important;
   }
 }
+
+.newCardListToogle {
+  padding: 10px;
+  height: 100%;
+  width: 300px;
+
+  .plusIcon {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    opacity: 0.6;
+
+    i {
+      font-size: 24px;
+    }
+  }
+}
