--- a/src/pages/Boards/CardList.less
+++ b/src/pages/Boards/CardList.less
@@ -1,5 +1,9 @@
 @import '~antd/lib/style/themes/default.less';
 
+.header:hover {
+  background-color: #f0f4f7;
+}
+
 .add {
   padding: 0 4px !important;
 }
@@ -27,7 +31,7 @@
   user-select: none;
 
   &.dragging {
-    background-color: rgba(240, 244, 247, 0.4);
+    background-color: #f0f4f7;
   }
 }
 
