--- a/src/pages/Boards/Board.less
+++ b/src/pages/Boards/Board.less
@@ -8,11 +8,24 @@
   margin: -24px -50vw;
   background: white;
   transition: 0.3s;
+
+  *::-webkit-scrollbar {
+    width: 6px !important;
+    height: 6px !important;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+  }
+
+  *::-webkit-scrollbar-track {
+    background: rgba(255, 255, 255, 0.08);
+  }
 }
 
 .board {
   display: flex;
-  height: ~'calc(100vh - @{layout-header-height} - 100px)' !important;
+  height: ~'calc(100vh - @{layout-header-height} - 105px)' !important;
   overflow-x: visible;
   overflow-y: hidden;
   transition: 0.3s;
@@ -25,16 +38,16 @@
 }
 
 .newCardListToogle {
-  padding: 10px;
-  height: 100%;
   width: 300px;
+  height: 100%;
+  padding: 10px;
 
   .plusIcon {
     display: flex;
     flex-direction: column;
-    height: 100%;
     justify-content: center;
     align-items: center;
+    height: 100%;
     cursor: pointer;
     opacity: 0.6;
 
