--- a/src/pages/Boards/CardList.less
+++ b/src/pages/Boards/CardList.less
@@ -8,24 +8,13 @@
   padding: 0 4px !important;
 }
 
-.dropzone {
-  /* stop the list collapsing when empty */
-  height: 100%;
-  min-height: 250px;
-
-  /* not relying on the items for a margin-bottom
-  as it will collapse when the list is empty */
-  margin-bottom: 8px;
-}
-
 .listWrapper {
   display: flex;
   flex-direction: column;
   width: 300px;
-  height: 100%;
-  padding: 8px;
-  padding-bottom: 0;
-  border: 8px;
+  min-height: ~'calc(100% - 41px)';
+  padding: 8px 8px 0;
+  overflow-y: auto;
   opacity: inherit;
   transition: background-color 0.1s ease, opacity 0.1s ease;
   user-select: none;
@@ -33,10 +22,4 @@
   &.dragging {
     background-color: #f0f4f7;
   }
-}
-
-.scroll {
-  display: flex;
-  height: 100% !important;
-  overflow: hidden;
 }
