adcionar card cover

--- a/src/pages/Cards/ViewCardModal.less
+++ b/src/pages/Cards/ViewCardModal.less
@@ -6,6 +6,19 @@
   animation: 0s !important;
 }
 
+.headerImage {
+  box-sizing: border-box;
+  height: 150px;
+  margin: -24px -24px 24px;
+  padding: 0;
+  background-color: rgb(57, 72, 126);
+  background-image: url(https://os.alipayobjects.com/rmsportal/QBnOOoLaAfKPirc.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain;
+  background-origin: content-box;
+}
+
 .cardTitle {
   margin-bottom: 12px;
   padding-right: 32px;
