Adicionar botão ao Upload avatar

--- a/src/components/Upload/Avatar/index.less
+++ b/src/components/Upload/Avatar/index.less
@@ -1,10 +1,21 @@
 @import '~antd/lib/style/themes/default.less';
 
-.avatar {
+.upload {
+  text-align: center;
+  cursor: pointer;
+}
+
+.avatarWapper, .avatar {
   width: 144px;
   height: 144px;
+}
+
+.avatarWapper {
   margin-bottom: 12px;
   overflow: hidden;
+}
+
+.avatar {
   border-radius: 50%;
   img {
     width: 100%;
