--- a/src/components/PageHeaderWrapper/index.less
+++ b/src/components/PageHeaderWrapper/index.less
@@ -8,9 +8,12 @@
   :global {
     .ant-page-header {
       padding: 16px 32px 0;
-      background: #fff;
-      border-bottom: 1px solid #e8e8e8;
     }
+  }
+
+  .wrapper {
+    background: #fff;
+    border-bottom: 1px solid #e8e8e8;
   }
 
   .wide {
