--- a/src/components/PageHeaderWrapper/index.less
+++ b/src/components/PageHeaderWrapper/index.less
@@ -30,9 +30,10 @@
   }
 
   .logo {
-    flex: 0 1 auto;
+    display: inline-block;
+    vertical-align: middle;
     margin-right: 16px;
-    padding-top: 1px;
+    margin-top: -1px;
     > img {
       display: block;
       width: 28px;
@@ -69,7 +70,6 @@
     margin-bottom: 16px;
   }
 
-  .logo,
   .content,
   .extraContent {
     margin-bottom: 16px;
