--- a/src/pages/Teams/Milestone.less
+++ b/src/pages/Teams/Milestone.less
@@ -12,7 +12,7 @@
   font-size: 0;
   .listContentItem {
     display: inline-block;
-    margin-left: 40px;
+    margin-left: 10px;
     color: @text-color-secondary;
     font-size: @font-size-base;
     vertical-align: middle;
@@ -25,4 +25,8 @@
       line-height: 22px;
     }
   }
+}
+
+.progress {
+  width: 50%;
 }
