--- a/src/pages/Cards/ViewCardModal.less
+++ b/src/pages/Cards/ViewCardModal.less
@@ -7,6 +7,7 @@
 }
 
 .headerImage {
+  border-radius: 4px;
   box-sizing: border-box;
   height: 150px;
   margin: -24px -24px 24px;
@@ -15,7 +16,7 @@
   background-image: url(https://os.alipayobjects.com/rmsportal/QBnOOoLaAfKPirc.png);
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: contain;
+  background-size: cover;
   background-origin: content-box;
 }
 
