style(Assignee, Participants): lista de usuário

--- a/src/pages/Cards/CardView.less
+++ b/src/pages/Cards/CardView.less
@@ -12,6 +12,7 @@
 
 .aside {
   flex: 0 0 300px;
+  max-width: 300px;
   margin: -24px -24px -24px 24px;
   padding: 48px 24px 24px;
   background-color: #f0f2f5;
